if("${PROJECT_NAME}" STREQUAL "MPDROOT")
	set(CMAKE_SOURCE_FAIRMCSTACK "${CMAKE_SOURCE_DIR}/mcstack")
else()
	set(CMAKE_SOURCE_FAIRMCSTACK "${CMAKE_SOURCE_DIR}/examples/common/mcstack")
endif()
add_subdirectory(cuts)
add_subdirectory(format)
add_subdirectory(nica_helpers)
add_subdirectory(cutmonitors)